# redemptionarc

./: .env.example  .gitignore  AGENTS.md  AUDIT-DOCUMENT.md  ESTRATEGIA.md  NEVER-FORGET.md  POST_FLIP_REPORT.md  PROOF-OF-PROFIT.md  README.md  SISTEMA.md  package-lock.json  package.json
backups/: orca-kpx9-config-backup.json
docs/: AGGRESSIVE-RUNBOOK.md  ARC-LAB.md  ARCHITECTURE.md  ATOM-ENCHANCEDBLOCK-CASH-GATE.md  COMMITS.md  EXECUTION-PLAN.md  HOP-CASHABILITY-GATE.md  HOP-EXTERNAL-FLOW-WATCH.md  HOP-ROUTE-INCENTIVE.md  KAMINO-BASELINE.md  MAINNET-PROGRAM-CANDIDATE-SCAN.md  MILLION-SCALE-PLAN.md  OWNED-AMM-PATH.md  OWNED-VENUE-SPEC.md  PUMP-ORCA-INDEX-PLAN.md  REDEMPTION-CASH-RELAY.md  RUNBOOK-EPOCH978.md  STACC-REAL-MODEL.md  SYSTEM-COMPLETE.md  TIOTULIO-V5-ZERO-CAPITAL.md
iman-legacy/: THE-IMPOSSIBLE.md  iman-v3-biblia.html
iman-legacy/cronometro/: Cargo.toml  deploy.sh  iman-cronometro.service
iman-legacy/cronometro/src/: main.rs
iman-legacy/escorpion/: Cargo.toml  iman-escorpion.service
iman-legacy/escorpion/.cargo/: config.toml
iman-legacy/escorpion/src/: main.rs
iman-legacy/trampa/: Cargo.toml
iman-legacy/trampa/src/: ancla.rs  error.rs  lib.rs  state.rs
iman-legacy/trampa/src/instructions/: claim_incentivo.rs  collect_fees.rs  fund_pool.rs  initialize_pool.rs  lock_opportunity.rs  mod.rs  rebalance.rs  swap.rs  update_magnetar.rs  update_synthetic_oracle.rs
receipts/: ATOM-ENCHANCEDBLOCK-CASH-GATE-LATEST.json  BUNDLE-WOMB-LITE-PLAN-LATEST.json  BZK_POOL_TXS_2026-05-22_1425_to_2026-05-23_0614.json  CSDM-IX7-APPROVAL-PLAN-LATEST.json  CSDM-IX7-POSTLIVE-SNAPSHOT-LATEST.json  CSDM-IX7-PRELIVE-SNAPSHOT-LATEST.json  CSDM-IX7-SIM-LATEST.json  FLYWHEEL-RUN-001.json  (+551 more)
(+174 files in other folders)
